# shopify-admin-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  _client.py  main.py  server.py
src/shopify/: __init__.py  config.py  tools.py  types.py
